--- a/englishwebsite/englishwebsite_app/static/css/professors.css
+++ b/englishwebsite/englishwebsite_app/static/css/professors.css
@@ -46,7 +46,7 @@ body{
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #4070F4;
+  background-color:#df691a;
   border-radius: 25px 25px 0 25px;
 }
 .overlay::before,
@@ -57,7 +57,7 @@ body{
   bottom: -40px;
   height: 40px;
   width: 40px;
-  background-color: #4070F4;
+  background-color: #df691a;
 }
 .overlay::after{
   border-radius: 0 25px 0 0;
@@ -76,16 +76,16 @@ body{
   width: 100%;
   object-fit: cover;
   border-radius: 50%;
-  border: 4px solid #4070F4;
+  border: 4px solid #df691a;;
 }
 .name{
   font-size: 18px;
   font-weight: 500;
-  color: #333;
+  color: #FFF;
 }
 .description{
   font-size: 14px;
-  color: #707070;
+  color: #FFF;
   text-align: center;
 }
 .button{
@@ -93,14 +93,14 @@ body{
   font-size: 16px;
   color: #FFF;
   padding: 8px 16px;
-  background-color: #4070F4;
+  background-color: #df691a;;
   border-radius: 6px;
   margin: 14px;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 .button:hover{
-  background: #265DF2;
+  background: #5bc0de;
 }
 
 .swiper-navBtn{
@@ -108,7 +108,7 @@ body{
   transition: color 0.3s ease;
 }
 .swiper-navBtn:hover{
-  color: #4070F4;
+  color: #4e5d6c;
 }
 .swiper-navBtn::before,
 .swiper-navBtn::after{
@@ -125,7 +125,7 @@ body{
   opacity: 1;
 }
 .swiper-pagination-bullet-active{
-  background-color: #4070F4;
+  background-color: #4e5d6c;
 }
 
 @media screen and (max-width: 768px) {
