--- a/englishwebsite/englishwebsite_app/templates/professors.html
+++ b/englishwebsite/englishwebsite_app/templates/professors.html
@@ -13,9 +13,13 @@
         <link rel="stylesheet" type="text/css" href="{% static '/css/swiper-bundle.min.css' %}"/>
 
         <!-- CSS -->
-        <link rel="stylesheet" type="text/css" href="{% static '/css/professors.css' %}"/>                           
+        <link rel="stylesheet" type="text/css" href="{% static '/css/professors.css' %}"/>
+        <!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+		<!-- Bootswatch-->
+		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>                           
     </head>
-
     <body>
         <div class="slide-container swiper">
             <div class="slide-content">
