--- a/englishwebsite/englishwebsite_app/templates/professors.html
+++ b/englishwebsite/englishwebsite_app/templates/professors.html
@@ -23,6 +23,7 @@
     <body>
         <div class="slide-container swiper">
             <div class="slide-content">
+                <button class="buttonback" onclick="history.back()" name="back">BACK TO MAIN</button>
                 <div class="card-wrapper swiper-wrapper">
                     <div class="card swiper-slide">
                         <div class="image-content">
