Back buttons and restyling page

--- a/englishwebsite/englishwebsite_app/templates/countries-nationalitiesAtoC.html
+++ b/englishwebsite/englishwebsite_app/templates/countries-nationalitiesAtoC.html
@@ -300,6 +300,7 @@ integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI
 				<p>If you dont want to see these exercises you can go back.</p>
 				<p class="lead">
 				<a class="btn btn-primary btn-lg" href="vocabulary-exercises" role="button">GO BACK</a>
+        <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
 				</p>
 			</div>
       <div id="principal">
