--- a/englishwebsite/englishwebsite_app/templates/countries-nationalitiesC-H.html
+++ b/englishwebsite/englishwebsite_app/templates/countries-nationalitiesC-H.html
@@ -301,6 +301,7 @@
 				<p>If you dont want to see these exercises you can go back.</p>
 				<p class="lead">
 				<a class="btn btn-primary btn-lg" href="vocabulary-exercises" role="button">GO BACK</a>
+                <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
 				</p>
 			</div>
             <div id="principal">
@@ -332,8 +333,7 @@
                         ;;<span class="test-resp">;Score:</span>
                         <input type="button" name="score" value="" size="3" onfocus="this.blur()" />
                     </p>
-                </form>
-               
+                </form>              
             </div>
 
 
