--- a/englishwebsite/englishwebsite_app/templates/grammar-exercises.html
+++ b/englishwebsite/englishwebsite_app/templates/grammar-exercises.html
@@ -29,6 +29,7 @@
 				<p>If you dont want to see these exercises you can go back.</p>
 				<p class="lead">
 				<a class="btn btn-primary btn-lg" href="writing" role="button">GO BACK</a>
+				<a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
 				</p>
 			</div>
 			{% comment %} <ul>
