--- a/englishwebsite/englishwebsite_app/templates/articles.html
+++ b/englishwebsite/englishwebsite_app/templates/articles.html
@@ -127,6 +127,7 @@
 				<p>If you dont want to see these exercises you can go back.</p>
 				<p class="lead">
 				<a class="btn btn-primary btn-lg" href="grammar-exercises" role="button">GO BACK</a>
+        <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
 				</p>
 			</div>
       <div id="principal">
