--- a/englishwebsite/englishwebsite_app/templates/barra.html
+++ b/englishwebsite/englishwebsite_app/templates/barra.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-3">
-    <a class="navbar-brand" href="#">ENGLISHWEBSITE</a>
+    <a class="navbar-brand">ENGLISH WEBSITE</a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">        
         <div class="collapse navbar-collapse" id="navbarColor01">
             {% if user.is_superuser %}
