--- a/englishwebsite/englishwebsite_app/templates/base.html
+++ b/englishwebsite/englishwebsite_app/templates/base.html
@@ -22,7 +22,14 @@
 
     <style>
         header.centerheader {
+            padding-top: 10rem;
+            padding-bottom: calc(10rem - 3rem);
             background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url('static/img/homeimage.png');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: scroll;
+            background-size: contain;
+        }
     </style>
 
 <body>
