--- a/englishwebsite/englishwebsite_app/templates/register.html
+++ b/englishwebsite/englishwebsite_app/templates/register.html
@@ -20,8 +20,9 @@
 				<legend class="border-buttom mb-2">REGISTER</legend>
 				{{ form|crispy }}
 			</fieldset>
-			<div class="form-group">
-				<button class="btn btn-primary" type="submit">Confirm</button>
+			<div class="form-group" style = "text-align: center;">
+				<a class="btn btn-primary" href="{% url 'logout' %}" role="button">Home</a>
+				<button class="btn btn-success" type="submit">Confirm</button>
 			</div>
 			<div class="d-flex align-items-center justify-content-center pb-4">
 				<small class="text-muted">
