--- a/englishwebsite/englishwebsite_app/templates/registration/login.html
+++ b/englishwebsite/englishwebsite_app/templates/registration/login.html
@@ -22,7 +22,10 @@
             {% comment %} {{form.as_p}} {% endcomment %}
             {{ form|crispy }}
         </fieldset>
-        <button type="submit" class="btn btn-primary" href="/registration/login/">Confirm</button>
+        <div class="form-group" style = "text-align: center;">
+            <a class="btn btn-primary" href="{% url 'logout' %}" role="button">Home</a>
+            <button type="submit" class="btn btn-success" href="/registration/login/">Confirm</button>
+        </div>    
         <div class="d-flex align-items-center justify-content-center pb-4">
             <small class="text-muted">
                 You dont have an account? <a class="ml-2" href="/register/">Create a new one here!</a>
