ejercicios multiple opcion

--- a/englishwebsite/englishwebsite_app/templates/reading.html
+++ b/englishwebsite/englishwebsite_app/templates/reading.html
@@ -32,8 +32,9 @@
 			
 			<ul>
 				{% for exercise in exercise_list %}
-				<li> {{exercise.title_exercise}} - {{exercise.description_exercise}} 
+				<li> {{exercise.title_exercise}} - {{exercise.author}}
 					<br/>
+					{{exercise.description_exercise}} 
 					<details>
 						<summary>Details</summary>
 						<p>{{exercise.activity}}</p>
