--- a/englishwebsite/englishwebsite_app/templates/barra.html
+++ b/englishwebsite/englishwebsite_app/templates/barra.html
@@ -17,6 +17,7 @@
                     <a class="dropdown-item" href="reading">READING</a>
                     <a class="dropdown-item" href="listening">LISTENING</a>
                     <a class="dropdown-item" href="speaking">SPEAKING</a>
+                    <a class="dropdown-item" href="MultipleOption">MULTIPLE OPTIONS</a>
                     <a class="dropdown-item" href="createExercises">CREATE EXERCISES</a>     
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'logout' %}">LOG OUT</a>
