--- a/englishwebsite/englishwebsite_app/templates/listening.html
+++ b/englishwebsite/englishwebsite_app/templates/listening.html
@@ -32,7 +32,9 @@
 			</div>
 			<ul>
 				{% for exercise in exercise_list %}
-				<li> {{exercise.title_exercise}} - {{exercise.description_exercise}} 
+				<li> {{exercise.title_exercise}} - {{exercise.author}}
+					<br/>
+					{{exercise.description_exercise}} 
 					<br/>
 					<details>
 						<summary>Details</summary>
