Revert "ejercicios multiple opcion"
This reverts commit 48e63b5abf10169859d05344543d0c174fe4677f.

--- a/englishwebsite/englishwebsite_app/templates/listening.html
+++ b/englishwebsite/englishwebsite_app/templates/listening.html
@@ -32,9 +32,7 @@
 			</div>
 			<ul>
 				{% for exercise in exercise_list %}
-				<li> {{exercise.title_exercise}} - {{exercise.author}}
-					<br/>
-					{{exercise.description_exercise}} 
+				<li> {{exercise.title_exercise}} - {{exercise.description_exercise}} 
 					<br/>
 					<details>
 						<summary>Details</summary>
