--- a/englishwebsite/englishwebsite_app/templates/speaking.html
+++ b/englishwebsite/englishwebsite_app/templates/speaking.html
@@ -32,9 +32,8 @@
 			</div>
 			<ul>
 				{% for exercise in exercise_list %}
-				<li>{{exercise.title_exercise}} - {{exercise.author}}
+				<li> {{exercise.title_exercise}} - {{exercise.description_exercise}} 
 					<br/>
-					{{exercise.description_exercise}} 
 					<details>
 						<summary>Details</summary>
 						<p>{{exercise.activity}}</p>
