--- a/englishwebsite/englishwebsite_app/templates/createExercises.html
+++ b/englishwebsite/englishwebsite_app/templates/createExercises.html
@@ -17,9 +17,6 @@
 
 <body>
 	<section id="writingexercises" class="wrapper style3 special">
-		<p class="lead">
-				<a class="btn btn-primary btn-lg" href="homelogin" role="button">HOMEPAGE</a>
-		</p>
 		<div class="inner">
 			{% comment %} <header class="major">
 				<h2>CREATE YOUR EXERCISES!</h2>
@@ -28,8 +25,11 @@
 			<div class="jumbotron">
 				<h1 class="display-3">CREATE YOUR EXERCISES!</h1>
 				<p class="lead">In this section you can create your excercises...</p>
-				<a class="btn btn-primary btn-lg" href="addQuestion" role="button">CREATE MULTIPLE OPTIONS EXERCISES</a>
 				<hr class="my-4">
+				<p>If you dont want to create them, you can go back to hompage.</p>
+				<p class="lead">
+				<a class="btn btn-primary btn-lg" href="homelogin" role="button">HOMEPAGE</a>
+				</p>
 			</div>
             <form method="post", action="/createExercises" enctype="multipart/form-data">
                 {% csrf_token %}  
@@ -37,6 +37,7 @@
 				{{ form|crispy }} 
                 <button type="submit" class="btn btn-primary btn-lg" name="CREATE">CREATE EXERCISE</button>
             </form>
+	
 	</section>
 </body>
 
