--- a/englishwebsite/englishwebsite_app/templates/writing.html
+++ b/englishwebsite/englishwebsite_app/templates/writing.html
@@ -38,8 +38,9 @@
 			</div>
 			<ul>
 				{% for exercise in exercise_list %}
-				<li> {{exercise.title_exercise}} - {{exercise.description_exercise}} 
+				<li>{{exercise.title_exercise}} - {{exercise.author}}
 					<br/>
+					{{exercise.description_exercise}}
 					<details>
 						<summary>Details</summary>
 						<p>{{exercise.activity}}</p>
