--- a/englishwebsite/englishwebsite_app/templates/result.html
+++ b/englishwebsite/englishwebsite_app/templates/result.html
@@ -1,3 +1,17 @@
+{%load static%}
+<head>
+    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/exercises.css' %}" /> {% endcomment %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% comment %} <link rel="stylesheet" type="text/css" href="{% static '/css/login-register.css' %}"/> {% endcomment %}
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <!-- Bootswatch-->
+    <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
+</head>
+<p class="lead">
+    <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
+</p>
 <div class="container ">
         
     <div class="card-columns" style="padding: 10px; margin: 20px;">
