--- a/englishwebsite/englishwebsite_app/templates/professors.html
+++ b/englishwebsite/englishwebsite_app/templates/professors.html
@@ -33,7 +33,7 @@
             {% else %}
             <p>If you dont want view this page, you can go back to homepage, or create an account.</p>
             <a class="button" onclick="history.back()" role="button">Homepage</a> 
-            <a class="button" href="/register/ role="button">Register now</a>
+            <a class="button" href="/register/" role="button">Register now</a>
             {% endif %}
             </p>
         </div>
@@ -41,19 +41,19 @@
             <div class="slide-content">
                 <div class="card-wrapper swiper-wrapper">
 
-                    {% for proffesor in professors %}
+                    {% for professor in professors %}
                     <div class="card swiper-slide">
                         <div class="image-content">
                             <span class="overlay"></span>
                             <div class="card-image">
-                                <img src="{{MEDIA_URL}}{{proffesor.avatar}}" alt="" class="card-img">
+                                <img src="{{MEDIA_URL}}{{professor.avatar}}" alt="" class="card-img">
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name">{{proffesor.name}}</h2>
-                            <p class="description">{{proffesor.short_description}}</p>
+                            <h2 class="name">{{professor.name}}</h2>
+                            <p class="description">{{professor.short_description}}</p>
 
-                            <button class="button" href="/proffesors_more"">View More</button>
+                            <a class="button" href="{% url 'professors_more' professor.id %}">View More</a>
                         </div>
                     </div>
                     {% endfor%}
