--- a/englishwebsite/englishwebsite_app/templates/barra.html
+++ b/englishwebsite/englishwebsite_app/templates/barra.html
@@ -18,7 +18,9 @@
                     <a class="dropdown-item" href="listening">LISTENING</a>
                     <a class="dropdown-item" href="speaking">SPEAKING</a>
                     <a class="dropdown-item" href="MultipleOption">MULTIPLE OPTIONS</a>
-                    <a class="dropdown-item" href="createExercises">CREATE EXERCISES</a>     
+                    {% if user.is_staff %}
+                    <a class="dropdown-item" href="createExercises">CREATE EXERCISES</a> 
+                    {% endif %}    
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'logout' %}">LOG OUT</a>
                 </div>
