--- a/englishwebsite/englishwebsite_app/templates/professors_more.html
+++ b/englishwebsite/englishwebsite_app/templates/professors_more.html
@@ -19,13 +19,38 @@
 		<link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>                           
     </head>
     <body>
-        <div class="jumbotron">
-            <h1 class="display-3">{{professor.name}}</h1>
-            <p class="lead">{{professor.short_description}}</p>
-            <hr class="my-4">
-            
-            <p class="lead">
-            <p>{{professor.full_description}}</p>
-            <a class="button" onclick="history.back()" role="button">Go back</a>        
+        <div>
+            <a class="button" onclick="history.back()" role="button">Back</a> 
+            <div class="jumbotron">
+                <h1 class="display-3">{{professor.name}}</h1>
+                <p class="lead">{{professor.short_description}}</p>
+                <hr class="my-4">
+                
+                <p class="lead">
+                <p>{{professor.full_description}}</p>
+                </p>
+            </div>
+
+            {% if not comments.all %}
+                No comments Yet... <a href"#">Add one</a>
+            {% else %}
+            {% for comment in comments %}
+            <div class="toast show" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                    <strong class="mr-auto">{{comment.name}}</strong>
+                    <small>11 mins ago</small>
+                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    Comentario hecho por alumno: {{comment.body}}
+                </div>
+                
+            </div>
+            {% endfor %}
+            <a href"#">Add another comment</a>
+            {% endif %}
+        </div>
     </body>
 </html>
