--- a/englishwebsite/englishwebsite_app/templates/professors_more.html
+++ b/englishwebsite/englishwebsite_app/templates/professors_more.html
@@ -37,7 +37,7 @@
             {% for comment in comments %}
             <div class="toast show" role="alert" aria-live="assertive" aria-atomic="true">
                 <div class="toast-header">
-                    <strong class="mr-auto">{{comment.name}}</strong>
+                    <strong class="mr-auto">{{comment.user}}</strong>
                     <small>11 mins ago</small>
                     <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
