--- a/englishwebsite/englishwebsite_app/templates/professors_more.html
+++ b/englishwebsite/englishwebsite_app/templates/professors_more.html
@@ -44,7 +44,7 @@
                     */
                     (function() { // DON'T EDIT BELOW THIS LINE
                     var d = document, s = d.createElement('script');
-                    s.src = 'https://englishwebsitegroup3.herokuapp.com/professors-more-1.disqus.com/embed.js';
+                    s.src = 'https://englishwebsitegroup3-herokuapp-com-professors-more-1.disqus.com/embed.js';
                     s.setAttribute('data-timestamp', +new Date());
                     (d.head || d.body).appendChild(s);
                     })();
