--- a/englishwebsite/englishwebsite_app/templates/homelogin.html
+++ b/englishwebsite/englishwebsite_app/templates/homelogin.html
@@ -51,6 +51,9 @@
                     <p class="text-white-150 font-weight-light mb-5" style="color: white;">
                         Welcome again <big>{{ user.username }}</big> !
                     </p>
+                    <p class="lead">
+                        <a class="btn btn-primary btn-lg" href="/search" role="button">SEARCH FOR EXERSICES HERE!</a>
+                    </p>
                 </div>
             </div>
         </div>
