--- a/englishwebsite/englishwebsite_app/templates/search/search.html
+++ b/englishwebsite/englishwebsite_app/templates/search/search.html
@@ -9,7 +9,9 @@
     <!-- Bootswatch-->
     <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
 </head>
-
+<p class="lead">
+    <a class="btn btn-primary btn-lg" href="/homelogin" role="button">HOMEPAGE</a>
+</p>
 
 <h2>Buscar:</h2>
 
