--- a/englishwebsite/englishwebsite_app/templates/exersiceDetails.html
+++ b/englishwebsite/englishwebsite_app/templates/exersiceDetails.html
@@ -17,7 +17,7 @@
             <br/>
             <p>{{exercise.activity}}</p>
             
-            <img src= '{{MEDIA_URL}}{{exercise.file}}' alt="Image for the activiy. If it doesn't exist, you will see this message">
+            <img src= '{{MEDIA_URL}}{{exercise.file}}' width="400" height="250" alt="Image for the activiy. If it doesn't exist, you will see this message">
             
             <br/>
             <audio controls autoplay>
