Correccion de texto de multiple opcion a multiple choice

--- a/englishwebsite/englishwebsite_app/templates/barra.html
+++ b/englishwebsite/englishwebsite_app/templates/barra.html
@@ -17,7 +17,7 @@
                     <a class="dropdown-item" href="reading">READING</a>
                     <a class="dropdown-item" href="listening">LISTENING</a>
                     <a class="dropdown-item" href="speaking">SPEAKING</a>
-                    <a class="dropdown-item" href="MultipleOption">MULTIPLE OPTIONS</a>
+                    <a class="dropdown-item" href="MultipleOption">MULTIPLE CHOICE</a>
                     {% if user.is_staff %}
                     <a class="dropdown-item" href="createExercises">CREATE EXERCISES</a> 
                     {% endif %}    
