--- a/englishwebsite/englishwebsite_app/templates/exersiceDetails.html
+++ b/englishwebsite/englishwebsite_app/templates/exersiceDetails.html
@@ -16,15 +16,16 @@
             <h3>{{exercise.description_exercise}}</h3>
             <br/>
             <p>{{exercise.activity}}</p>
-            
-            <img src= '{{MEDIA_URL}}{{exercise.file}}' width="400" height="250" alt="Image for the activiy. If it doesn't exist, you will see this message">
-            
+            {% if exercise.file != '' %}
+                <img src= '{{MEDIA_URL}}{{exercise.file}}' width="400" height="250" alt="Image for the activiy. If it doesn't exist, you will see this message">
+            {% endif %}
             <br/>
-            <audio controls autoplay>
-                <source src="{{MEDIA_URL}}{{exercise.file}}" type="audio/mpeg">
-              there is no audio here.
-            </audio> 
-            
+            {% if exercise.audio != '' %}
+                <audio controls autoplay>
+                    <source src="{{MEDIA_URL}}{{exercise.file}}" type="audio/mpeg">
+                there is no audio here.
+                </audio> 
+            {% endif %}
             <details>
                 <summary>Correct answer</summary>
                 <p>{{exercise.correct_answer}}</p>
